--- a/doubleRangeSlider/doubleSlider.html
+++ b/doubleRangeSlider/doubleSlider.html
@@ -7,7 +7,7 @@
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <!--Stylesheet-->
-  <link rel="stylesheet" href="vortexSliderStyle.css">
+  <link rel="stylesheet" href="sliderStyle.css">
 
   <!--slider one-->
 
@@ -31,7 +31,7 @@
     </div>
   </div>
 </body>
-<script src="rangesliderscript.js"></script>
+<script src="sliderScript.js"></script>
 <!--End slider one-->
 
 <!--slider two-->
@@ -56,7 +56,7 @@
     </div>
   </div>
 </body>
-<script src="rangesliderscript2.js"></script>
+<script src="sliderScript.js"></script>
 <!--End slider two-->
 
 
