--- a/doubleRangeSlider/doubleSlider.html
+++ b/doubleRangeSlider/doubleSlider.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <!--Stylesheet-->
   <link rel="stylesheet" href="sliderStyle.css">
-
+</head>
   <!--slider one-->
 
 <body>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="slider-track"></div>
+      <div class="slider-track2"></div>
       <input type="range" min="0" max="100" value="30" id="slider-3" oninput="slideThree()">
       <input type="range" min="0" max="100" value="70" id="slider-4" oninput="slideFour()">
     </div>
